aligned nav to top to combat chrome mob issue

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
     margin: 0;
-    background: #1b171f;
+    background: #0c0c0c;
 
 }
 
@@ -73,7 +73,6 @@ a {
     font-weight: bold;
     color: white;
     width: 100vw;
-    padding-top: 2vh;
     text-align: center;
     box-sizing: border-box;
     font-family: 'Poiret One';
@@ -85,15 +84,6 @@ a {
         padding: 1vh 3vw;
         color: white;
         border-radius: 2vh;
-    }
-
-    #menuoverlay {
-        position: fixed;
-        top: 22vh;
-        left: 0;
-        height: 66vh;
-        width: 100vw;
-        z-index: -1;
     }
 
     .sidebarlink:active {
@@ -108,9 +98,10 @@ a {
     justify-content: space-between;
     align-items: center;
     left: 0;
-    bottom: 3vh;
+    top: 11vh;
     width: 100vw;
-    height: 88vh;    flex-wrap: nowrap;
+    height: 85vh;
+    flex-wrap: nowrap;
     box-sizing: border-box;
 }
 
@@ -134,7 +125,7 @@ a {
         flex-wrap: nowrap;
     }
     .mllogo {
-        margin: 0 1.5vw;
+        margin: 0 3vw;
         max-height: 8vh;
         max-width: 10vw;
         border-radius: 20%;
@@ -200,8 +191,8 @@ a {
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    top: 10vh;
-    height: 88vh;
+    top: 11vh;
+    height: 86vh;
     left: 0;
     width: 90vw;
     transition: 0.5s;
